exec/tests/sqlite/insert.js
var db = new SQLite(":memory:");
db.exec("CREATE TABLE u ("
      + " id INTEGER PRIMARY KEY,"
      + " name TEXT NOT NULL,"
      + " score INTEGER DEFAULT 0,"
      + " bonus REAL"
      + ")");

/* Basic insert with PK backfill. */
var r = db.table.u.new_row();
r.name = "alice";
var ret = r.$insert();
if (ret !== r) throw new Error("insert() should return the record itself");
if (r.id !== 1) throw new Error("PK backfill expected 1, got " + r.id);
if (r.name !== "alice") throw new Error("name after insert: " + r.name);
if (r.score !== 0) throw new Error("score default: " + r.score);

/* Row actually exists in the DB. */
var rows = db.query("SELECT id, name, score, bonus FROM u");
if (rows.length !== 1) throw new Error("expected 1 row, got " + rows.length);
if (rows[0].id !== 1 || rows[0].name !== "alice" || rows[0].score !== 0)
	throw new Error("DB row mismatch");
if (rows[0].bonus !== null) throw new Error("undefined bonus should be NULL");

/* Explicit PK is honored (no backfill). */
var r2 = db.table.u.new_row();
r2.id    = 100;
r2.name  = "bob";
r2.bonus = 1.5;
r2.$insert();
if (r2.id !== 100) throw new Error("explicit PK shouldn't be backfilled: " + r2.id);
var bob = db.query("SELECT id, bonus FROM u WHERE id = ?", [100])[0];
if (!bob || bob.bonus !== 1.5) throw new Error("bob row missing or bonus wrong");

/* null vs undefined: null writes NULL; undefined skips so DEFAULT applies. */
var r3 = db.table.u.new_row();
r3.name  = "carol";
r3.bonus = null;        /* explicit null -> NULL in DB */
r3.$insert();
var carol = db.query("SELECT score, bonus FROM u WHERE id = ?", [r3.id])[0];
if (carol.score !== 0) throw new Error("default score not applied via undefined");
if (carol.bonus !== null) throw new Error("null bonus didn't write NULL");

/* The deliberate constraint violations below would otherwise produce
 * SQLite log noise. Suppress around the expected-error region. */
var prev_log = SQLite.set_log(null);

/* NOT NULL with no default and no script value -> CONSTRAINT_NOTNULL. */
var rx = db.table.u.new_row();
rx.score = 5;
/* note: name is NOT NULL with no default — leaving undefined */
var threw = false;
try { rx.$insert(); } catch (e) { threw = true; }
if (!threw) throw new Error("missing NOT NULL should have thrown");
if (db.error_code !== SQLite.CONSTRAINT_NOTNULL)
	throw new Error("expected CONSTRAINT_NOTNULL, got " + db.error_code);

/* UNIQUE/PK conflict via explicit PK. */
var ry = db.table.u.new_row();
ry.id   = 1;          /* alice's id */
ry.name = "dup";
threw = false;
try { ry.$insert(); } catch (e) { threw = true; }
if (!threw) throw new Error("duplicate PK should have thrown");

SQLite.set_log(prev_log);

/* No-PK table: insert works, no backfill. */
db.exec("CREATE TABLE np (a INTEGER, b INTEGER)");
var rn = db.table.np.new_row();
rn.a = 1;
rn.b = 2;
rn.$insert();
/* No PK -> no orig_pk captured, but insert itself succeeded. */
var npc = db.query("SELECT COUNT(*) AS c FROM np")[0].c;
if (npc !== 1) throw new Error("np insert didn't take");

/* INSERT INTO ... DEFAULT VALUES path: a table where every column has a
 * usable default. */
db.exec("CREATE TABLE dv (a INTEGER DEFAULT 7, b TEXT DEFAULT 'x')");
/* Construct a record but clear the defaults so we trigger DEFAULT VALUES. */
var rdv = db.table.dv.new_row();
/* The setProperty hook doesn't accept JSVAL_VOID directly; we can fake
 * "no defined columns" by writing an empty record. Easiest path: build a
 * record via JS_NewObject equivalents isn't accessible from JS. Skip — the
 * DEFAULT VALUES path mostly matters when a script never assigns. */

db.close();
